# src/controllers/references.ts
@@ -30,7 +30,24 @@ export const getReferencesByType = async (
 ) => {
   try {
     const { type } = req.params;
+    const { populate } = req.query;
     const data = await DefinedReference.find({ type });
+
+    if (type === "roles" && populate) {
+      await Promise.all(
+        data.map(async (role) => {
+          const roleJsonldData = JSON.parse(role.jsonld);
+          roleJsonldData.responsibilitiesAndObligations =
+            await DefinedReference.find({
+              uid: {
+                $in: roleJsonldData.responsibilitiesAndObligations,
+              },
+            });
+
+          role.jsonld = JSON.stringify(roleJsonldData);
+        })
+      );
+    }
     return res.json(data);
   } catch (err) {
     next(err);
